fix: break into components, league selection functionality, concentrate css

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -41,3 +41,75 @@ html body {
   background-color: rgb(243, 244, 246, var(--tw-bg-opacity, 1));
   height: 100vh;
 }
+
+.home-content {
+  display: flex;
+  padding: 2rem 10rem 0 10rem;
+}
+
+.live-scores-container {
+  background-color: white;
+  padding: 1rem;
+  border-radius: 15px;
+  box-shadow: 0 1px 3px 0 rgb(0, 0, 0, 0.1), 0 1px 2px -1px rgb(0, 0, 0, 0.1);
+}
+
+.league-selector-container {
+  display: inline-block;
+  background-color: rgb(243, 244, 246, var(--tw-bg-opacity, 1));
+  border-radius: 7px;
+  margin-top: 1rem;
+}
+
+.league-selector-button {
+  display: flex;
+  align-items: center;
+  padding: .5rem;
+  border-radius: 5px;
+  transition: .3s;
+}
+
+.league-selector-button:hover {
+  cursor: pointer;
+}
+
+.league-selector-img {
+  width: 16px;
+  height: 16px;
+  margin-right: .5rem;
+}
+
+.scores-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1rem;
+}
+
+.score-container {
+  display: flex;
+  align-items: center;
+  width: 40vw;
+  justify-content: space-between;
+  box-shadow: 0 1px 3px 0 rgb(0, 0, 0, 0.1), 0 1px 2px -1px rgb(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+
+.score-container:not(:last-child) {
+  margin-bottom: .5rem;
+}
+
+.score-home-container {
+  display: flex;
+  align-items: center;
+  margin-left: 1rem;
+}
+
+.score-away-container {
+  display: flex;
+  align-items: center;
+  margin-right: 1rem;
+}
+
+.score-number {
+  margin: 0 1rem 0 1rem;
+}
